# ai-bi-analytics

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
ai_bi_analytics/: main.py
ai_bi_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai_bi_analytics/api/: deps.py
ai_bi_analytics/api/routes/: query.py
ai_bi_analytics/core/: config.py  logging_config.py  rate_limiter.py
ai_bi_analytics/core/lua/: sliding_window_rate_limit.lua
ai_bi_analytics/db/: session.py
ai_bi_analytics/services/: cache.py  explanation.py  llm_client.py  nl_to_sql.py
app/: main.py
app/api/routes/: query.py
app/core/: config.py  rate_limiter.py
app/services/: nl_to_sql.py  sql_validator.py
app/tests/: test_sql_validator.py
example/: README.md
test_setup/: gen_test_table_data.py
tests/: conftest.py  test_api_deps.py  test_cache.py  test_db_session.py  test_llm_client.py  test_query.py  test_rate_limiter.py  test_sql_validator.py
