[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[project]
name = "ai-bi-backend"
dynamic = ["version"]
description = "AI powered bi backend"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Proprietary" }
authors = [{ name = "O_n_S", email = "saladguyo60@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Natural Language :: English",
  "License :: Other/Proprietary License",
  "Intended Audience :: Healthcare Industry",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

# default dependency
dependencies = [

]

[project.urls]
Homepage = "http://pip.slade360.co.ke/docs/tariffs-registry/"

[project.scripts]
tariffs_manage = "ai_bi_backend.bin.app:__main__"

[tool.hatch.envs.default.env-vars]
PIP_INDEX_URL = "https://{env:CI_PYPI_USER}:{env:CI_PYPI_PASSWORD}@pip.slade360.co.ke/simple"
PIP_EXTRA_INDEX_URL = "https://pypi.org/simple"

[dependency-groups]
lint = [
    "black~=25.11.0",
    "isort~=7.0.0",
    "ruff~=0.14.7",
]
ci = [
  "pre-commit~=4.5.0",
  "conventional-pre-commit~=3.2.0",
]
test = [
    "autoflake~=2.3.1",
    "Faker~=25.2.0",
    "model-bakery~=1.18.0",
    "pytest~=8.2.1",
    "pytest-cov~=5.0.0",
    "pytest-django~=4.8.0",
    "pytest-timeout~=2.3.1",
    "pytest-xdist[psutil]~=3.6.1"
]
dev = [
     {"include-group" = "test"},
     {"include-group" = "lint"},
     "git-changelog~=2.5.2"
]

[tool.hatch.envs.test]
dependency-groups = ["test"]

[tool.hatch.envs.lint]
dependency-groups = ["lint"]

[tool.hatch.envs.ci]
dependency-groups = ["ci"]

[tool.hatch.envs.dev]
dependency-groups = ["dev"]

# ── Version ──
[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.envs.test.env-vars]
DJANGO_SETTINGS_MODULE = "tests.test_settings"
SECRET_KEY = "averylongandstrongsecretkeyfortesting"

[tool.hatch.envs.test.scripts]
test_cov = "pytest"
test_quick = "pytest --cov-fail-under=100"

[tool.hatch.envs.lint.scripts]
check = [
  "ruff check .",
  "black --check --diff app",
  "isort --check --diff app",
]
fix = [
  "ruff check --fix .",
  "black app",
  "isort app",
]

# ── GLOBAL TOOL CONFIGURATIONS ──
[tool.black]
line-length = 88
target-version = ["py312"]
src = ["app"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["ai_bi_backend"]
src_paths = ["ai_bi_backend"]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "app/config/**",
    "**/migrations/*",
    "scripts/*",
    "app/**/tests/*",
    "manage.py",
    "noxfile_config.py",
    "**/tests/**"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no branch",
    "pragma: nocover",
    "pragma: no cover",
    "@(abc\\.)?abstractmethod"
]
show_missing = true
fail_under = 100
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
addopts = "--cov=app --cov-fail-under=100 --cov-report=html --cov-report=term-missing --cov-report=xml:coverage.xml -n auto --junitxml=junitxml_report/report.xml -v --durations=10 --cache-clear --create-db"
python_files = ["*test.py", "test_*.py"]
norecursedirs = "node_modules venv dist build env bin .cache .tox"
console_output_style = "progress"
log_cli = true
log_cli_level = "ERROR"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "slade"
url = "https://pip.slade360.co.ke/simple"

# --------------------------------------------------
# Semantic release configuration
# --------------------------------------------------

[tool.semantic_release]
version_variables = ["app/__init__.py:__version__"]
tag_format = "{version}"
commit_message = "chore(release): {version}\n\nAuto-generated by python-semantic-release"

[tool.semantic_release.changelog.default_templates]
changelog_file = "docs/CHANGELOG.md"
output_format = "md"
prepend = true

[tool.semantic_release.publish]
disable = true
upload_to_vcs_release = false

[tool.semantic_release.branches.staging]
match = "staging"
prerelease = false
prerelease_token = "" # just to force release tag is stable

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix"]
